--- a/src/components/Community/index.module.css
+++ b/src/components/Community/index.module.css
@@ -4,6 +4,11 @@
   background-color: #FCFAFF;
   position: relative;
 }
+@media screen and (max-width: 650px) {
+  .container {
+    flex-direction: column;
+  }
+}
 .container .waterMark {
   position: absolute;
   top: 75px;
@@ -68,4 +73,14 @@
   border-top-left-radius: 50px;
   background: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
   position: relative;
+}
+@media screen and (max-width: 650px) {
+  .container .illustration {
+    width: 75%;
+    padding-left: 7.5px;
+    padding-top: 7.5px;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
 }/*# sourceMappingURL=index.module.css.map */
