--- a/src/components/Community/index.module.scss
+++ b/src/components/Community/index.module.scss
@@ -3,6 +3,9 @@
     align-items: center;
     background-color: #FCFAFF;
     position: relative;
+    @media screen and (max-width:650px) {
+        flex-direction: column;
+    }
     .waterMark{
         position: absolute;
         top: 75px;
@@ -10,6 +13,7 @@
         z-index: 0;
     }
     .content{
+        
         flex-basis: 60%;
         padding-left: 30px;
         display: flex;
@@ -68,5 +72,11 @@
         border-top-left-radius: 50px;
         background: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
         position: relative;
+        @media screen and (max-width: 650px) {
+            width: 75%;
+            padding-left: 7.5px;
+            padding-top: 7.5px;
+            height: fit-content;
+        }
     }
 }
