--- a/src/components/Community/index.module.scss
+++ b/src/components/Community/index.module.scss
@@ -13,7 +13,7 @@
         z-index: 0;
     }
     .content{
-        
+        z-index: 1;
         flex-basis: 60%;
         padding-left: 30px;
         display: flex;
