--- a/src/components/CTA/index.module.css
+++ b/src/components/CTA/index.module.css
@@ -1,1 +1,12 @@
-/*# sourceMappingURL=index.module.css.map */
+.container {
+  display: flex;
+  padding: 60px 2.5%;
+  justify-content: space-around;
+}
+.container .content {
+  flex-basis: 45%;
+}
+.container .team {
+  flex-basis: 35%;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+}/*# sourceMappingURL=index.module.css.map */
