--- a/src/components/CTA/index.module.scss
+++ b/src/components/CTA/index.module.scss
@@ -1,12 +1,45 @@
 .container{
     display: flex;
     padding: 60px 2.5%;
-    justify-content: space-around;
+    justify-content: space-between;
+    color: #4D4D4D;
     .content{
         flex-basis: 45%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        h1{
+            font-size: 40px;
+            font-weight: 700;
+            color: #000;
+        }
+        p{
+            line-height: 30px;
+        }
+        span{
+            background-color: #9D50F6;
+            border-radius: 999px;
+            width: fit-content;
+            padding: 7px 30px;
+            color: #fff;
+            font-weight: 600;
+            cursor: pointer;
+        }
     }
     .team{
         flex-basis: 35%;
         box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+        padding: 25px 50px;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        h3{
+            font-weight: 500;
+        }
+        .teamMembers{
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
     }
 }
