--- a/src/components/CTA/index.module.css
+++ b/src/components/CTA/index.module.css
@@ -1,23 +1,36 @@
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 60px 2.5%;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   color: #4D4D4D;
 }
+
 .container .content {
-  flex-basis: 45%;
+  -ms-flex-preferred-size: 45%;
+      flex-basis: 45%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 20px;
 }
+
 .container .content h1 {
   font-size: 40px;
   font-weight: 700;
   color: #000;
 }
+
 .container .content p {
   line-height: 30px;
 }
+
 .container .content span {
   background-color: #9D50F6;
   border-radius: 999px;
@@ -28,24 +41,42 @@
   color: #fff;
   font-weight: 600;
   cursor: pointer;
+  -webkit-transition: background-color 300ms ease-in-out;
   transition: background-color 300ms ease-in-out;
 }
+
 .container .content span:hover {
   background-color: rgba(157, 80, 246, 0.75);
 }
+
 .container .team {
-  flex-basis: 35%;
-  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  -ms-flex-preferred-size: 35%;
+      flex-basis: 35%;
+  -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
   padding: 25px 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 15px;
 }
+
 .container .team h3 {
   font-weight: 500;
 }
+
 .container .team .teamMembers {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 15px;
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
