--- a/src/components/Community/index.module.css
+++ b/src/components/Community/index.module.css
@@ -1,53 +1,81 @@
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #FCFAFF;
   position: relative;
 }
+
 @media screen and (max-width: 650px) {
   .container {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
+
 .container .waterMark {
   position: absolute;
   top: 75px;
   left: 0;
   z-index: 0;
 }
+
 .container .content {
   z-index: 1;
-  flex-basis: 60%;
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
   padding-left: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 20px;
 }
+
 .container .content .header {
   font-size: 35px;
   font-weight: 700;
   z-index: 1;
 }
+
 .container .content .header span {
   color: #008F75;
 }
+
 .container .content .details {
   line-height: 30px;
 }
+
 .container .content .linkContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 20px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
 }
+
 .container .content .linkContainer .linkIcon {
+  -webkit-transition: margin-left 500ms ease-in-out;
   transition: margin-left 500ms ease-in-out;
 }
+
 .container .content .linkContainer:hover .linkIcon {
   margin-left: 12px;
 }
+
 .container .content .linkContainer .communityLink {
   background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
   -webkit-background-clip: text;
@@ -56,6 +84,7 @@
   text-decoration: underline;
   position: relative;
 }
+
 .container .content .linkContainer .communityLink::after {
   content: "";
   position: absolute;
@@ -67,14 +96,17 @@
   bottom: -2px;
   left: 1px;
 }
+
 .container .illustration {
-  flex-basis: 40%;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
   padding-left: 7.5%;
   padding-top: 7.5%;
   border-top-left-radius: 50px;
   background: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
   position: relative;
 }
+
 @media screen and (max-width: 650px) {
   .container .illustration {
     width: 75%;
@@ -84,4 +116,5 @@
     height: -moz-fit-content;
     height: fit-content;
   }
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
