--- a/src/components/CtaTeam/index.module.css
+++ b/src/components/CtaTeam/index.module.css
@@ -2,8 +2,10 @@
   color: #4D4D4D;
   font-weight: 400;
 }
+
 .container h3 {
   color: #008F75;
   font-weight: 500;
   font-size: 15px;
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
