Added EditorNav component

--- a/src/components/Editor/index.module.css
+++ b/src/components/Editor/index.module.css
@@ -1,1 +1,11 @@
-/* No CSS *//*# sourceMappingURL=index.module.css.map */
+.editor {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 22% 1fr;
+      grid-template-columns: 22% 1fr;
+  -ms-grid-rows: 3fr 1fr;
+      grid-template-rows: 3fr 1fr;
+  background-color: #1e1e1e;
+  border-radius: 8px;
+}
+/*# sourceMappingURL=index.module.css.map */
