--- a/src/components/EditorNav/index.module.scss
+++ b/src/components/EditorNav/index.module.scss
@@ -1,7 +1,9 @@
 .nav {
   background-color: #252526;
-  padding: 15px;
+  padding: 18px;
   border-radius: 8px 0 0 8px;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+  color: #ebebeb;
+  font-size: 13.5px;
 }
