Working on toggle

--- a/src/components/FolderWrapper/index.module.css
+++ b/src/components/FolderWrapper/index.module.css
@@ -1,1 +1,6 @@
-/* No CSS *//*# sourceMappingURL=index.module.css.map */
+.wrapper {
+  overflow: hidden;
+  -webkit-transition: height 0.25s ease-in-out;
+  transition: height 0.25s ease-in-out;
+}
+/*# sourceMappingURL=index.module.css.map */
