--- a/src/components/EditorNav/index.module.css
+++ b/src/components/EditorNav/index.module.css
@@ -10,5 +10,10 @@
   grid-row: 1 / 3;
   color: #ebebeb;
   font-size: 13.5px;
+  font-family: "Segoe UI", sans-serif;
+}
+
+.nav button {
+  padding: 3px 0;
 }
 /*# sourceMappingURL=index.module.css.map */
