--- a/src/components/EditorNav/index.module.scss
+++ b/src/components/EditorNav/index.module.scss
@@ -6,4 +6,9 @@
   grid-row: 1 / 3;
   color: #ebebeb;
   font-size: 13.5px;
+  font-family: "Segoe UI", sans-serif;
+
+  button {
+    padding: 3px 0;
+  }
 }
