--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('./sass/abstracts/_colors.scss');
+@import url("./sass/abstracts/_colors.scss");
 @font-face {
   font-family: "Scandia";
   src: url("./assets/fonts/Scandia-Light.ttf") format("truetype");
@@ -33,6 +33,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Segoe UI";
+  src: url("./assets/fonts/SEGOEUI.TTF") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
 :root {
   --primary-color: #9d50f6;
 }
@@ -48,6 +55,6 @@
 body {
   font-family: Scandia, sans-serif;
 }
-html{
+html {
   scroll-behavior: smooth;
 }
