--- a/src/components/EditorFile/index.module.css
+++ b/src/components/EditorFile/index.module.css
@@ -1,10 +1,5 @@
 .file {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 5px;
-}
-/*# sourceMappingURL=index.module.css.map */
+}/*# sourceMappingURL=index.module.css.map */
