--- a/src/components/EditorNav/index.module.css
+++ b/src/components/EditorNav/index.module.css
@@ -2,18 +2,12 @@
   background-color: #252526;
   padding: 18px;
   border-radius: 8px 0 0 8px;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1 / 2;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1 / 3;
+  grid-column: 1/2;
+  grid-row: 1/3;
   color: #ebebeb;
   font-size: 13.5px;
   font-family: "Segoe UI", sans-serif;
 }
-
 .nav button {
   padding: 3px 0;
-}
-/*# sourceMappingURL=index.module.css.map */
+}/*# sourceMappingURL=index.module.css.map */
