added top left  watermrk

--- a/src/components/CTA/index.module.scss
+++ b/src/components/CTA/index.module.scss
@@ -3,6 +3,7 @@
     padding: 60px 2.5%;
     justify-content: space-around;
     color: #4D4D4D;
+    position: relative;
     .content{
         flex-basis: 45%;
         display: flex;
