--- a/src/components/CTA/index.module.css
+++ b/src/components/CTA/index.module.css
@@ -3,6 +3,7 @@
   padding: 60px 2.5%;
   justify-content: space-around;
   color: #4D4D4D;
+  position: relative;
 }
 .container .content {
   flex-basis: 45%;
