--- a/src/components/Community/index.module.scss
+++ b/src/components/Community/index.module.scss
@@ -11,6 +11,17 @@
         top: 75px;
         left: 0;
         z-index: 0;
+        animation: scale 4s ease infinite alternate-reverse;
+        
+            @keyframes scale {
+                from {
+                    transform: scale(0.9);
+                }
+        
+                to {
+                    transform: scale(1.2);
+                }
+            }
     }
     .content{
         z-index: 1;
