--- a/src/components/CTA/index.module.css
+++ b/src/components/CTA/index.module.css
@@ -5,6 +5,12 @@
   color: #4D4D4D;
   position: relative;
 }
+.container .bottomLeft {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+}
 .container .content {
   flex-basis: 45%;
   display: flex;
@@ -39,8 +45,11 @@
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
   padding: 25px 50px;
   display: flex;
+  position: relative;
   flex-direction: column;
   gap: 15px;
+  border-radius: 8px;
+  z-index: 1;
 }
 .container .team h3 {
   font-weight: 500;
@@ -54,4 +63,42 @@
   position: absolute;
   top: 0;
   left: 0;
+}
+.container .bottomTopLeft {
+  position: absolute;
+  bottom: 10px;
+  right: 0;
+}
+.container .gear {
+  animation: move 5s ease-in infinite alternate-reverse;
+  position: absolute;
+  bottom: 0;
+}
+.container .gear2 {
+  animation: move 4s ease-in infinite alternate-reverse;
+  position: absolute;
+  bottom: 0;
+  right: 10%;
+}
+.container .gear3 {
+  animation: move 3s ease-in infinite alternate-reverse;
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+}
+@-webkit-keyframes move {
+  from {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+  to {
+    transform: translate(60px, -30px) rotate(270deg);
+  }
+}
+@keyframes move {
+  from {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+  to {
+    transform: translate(60px, -30px) rotate(270deg);
+  }
 }/*# sourceMappingURL=index.module.css.map */
