--- a/src/components/Content/index.module.css
+++ b/src/components/Content/index.module.css
@@ -67,6 +67,23 @@
   bottom: -50px;
   z-index: -1;
   right: 20px;
+  animation: skew 4s ease infinite alternate-reverse;
+}
+@-webkit-keyframes skew {
+  from {
+    transform: skew(0deg, 0deg);
+  }
+  to {
+    transform: skew(30deg, -30deg);
+  }
+}
+@keyframes skew {
+  from {
+    transform: skew(0deg, 0deg);
+  }
+  to {
+    transform: skew(30deg, -30deg);
+  }
 }
 .container .leftDots {
   position: absolute;
