--- a/src/components/Reason/index.module.scss
+++ b/src/components/Reason/index.module.scss
@@ -32,6 +32,16 @@
     width: 250px;
     height: 250px;
     z-index: 0;
+    animation: skew 4s ease infinite alternate-reverse;
+          @keyframes skew {
+              from {
+                transform: skew(0deg , 0deg);
+              }
+          
+              to {
+                transform:  skew(30deg, -30deg);
+              }
+            }
   }
   .cards {
     display: flex;
@@ -61,17 +71,28 @@
     position: absolute;
     bottom: 20px;
     left: 20%;
+    animation: move 4s ease infinite alternate-reverse;
   }
-
-  .block2 {
-    position: absolute;
-    right: 20%;
-    bottom: 20px;
-  }
-
-  .block3 {
-    position: absolute;
-    left: 47%;
-    bottom: 50px;
-  }
+    .block2 {
+      position: absolute;
+      right: 20%;
+      bottom: 20px;
+      animation: move 4s ease infinite alternate-reverse;
+    }
+  
+    .block3 {
+      position: absolute;
+      left: 47%;
+      bottom: 50px;
+      animation: move 4s ease infinite alternate-reverse;
+    }
+      @keyframes move {
+        from {
+          transform: translate(0px, 0px);
+        }
+    
+        to {
+          transform: translate(30px, -30px);
+        }
+      }
 }
