--- a/src/components/Community/index.module.scss
+++ b/src/components/Community/index.module.scss
@@ -3,8 +3,14 @@
     align-items: center;
     background-color: #FCFAFF;
     position: relative;
+    width: 100%;
+    overflow-x: hidden;
+    --vertical-padding: 60px;
+    --horizontal-padding: 30px;
+    padding: var(--vertical-padding) var(--horizontal-padding);
     @media screen and (max-width:650px) {
         flex-direction: column;
+        gap: 45px;
     }
     .waterMark{
         position: absolute;
@@ -26,7 +32,6 @@
     .content{
         z-index: 1;
         flex-basis: 60%;
-        padding-left: 30px;
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -60,7 +65,6 @@
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 background-clip: text;
-                text-decoration: underline;
                 position: relative;
                 &::after{
     content: "";
@@ -78,13 +82,15 @@
     }
     .illustration{
         flex-basis: 40%;
-        padding-left: 7.5%;
-        padding-top: 7.5%;
+        --padding: 7.5%;
+        padding-left: var(--padding);
+        padding-top: var(--padding);
         border-top-left-radius: 50px;
         background: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
         position: relative;
         @media screen and (max-width: 650px) {
-            width: 75%;
+            width: 100%;
+            margin-inline: auto;
             padding-left: 7.5px;
             padding-top: 7.5px;
             height: fit-content;
