--- a/src/components/CTA/index.module.scss
+++ b/src/components/CTA/index.module.scss
@@ -1,9 +1,16 @@
 .container{
     display: flex;
-    padding: 60px 2.5%;
+    --vertical-padding: 60px;
+    --horizontal-padding: 30px;
+    padding: var(--vertical-padding) var(--horizontal-padding);
     justify-content: space-around;
     color: #4D4D4D;
     position: relative;
+    width: 100%;
+    @media screen and (max-width: 650px) {
+        flex-direction: column;
+        gap: 45px;
+    }
     .bottomLeft {
             position: absolute;
             bottom: 0;
@@ -11,6 +18,7 @@
             z-index: -1;
         }
     .content{
+        z-index: 1;
         flex-basis: 45%;
         display: flex;
         flex-direction: column;
@@ -38,6 +46,7 @@
         }
     }
     .team{
+        background-color: #fff;
         flex-basis: 35%;
         box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
         padding: 25px 50px;
