--- a/src/components/Problem/index.module.scss
+++ b/src/components/Problem/index.module.scss
@@ -1,9 +1,14 @@
 .container {
   display: flex;
   position: relative;
-  padding: 60px 2.5%;
+  --vertical-padding: 60px;
+  --horizontal-padding: 30px;
+  padding: var(--vertical-padding) var(--horizontal-padding);
+  width: 100%;
+  overflow-x: hidden;
   @media screen and (max-width: 650px) {
     flex-direction: column-reverse;
+    gap: 30px;
   }
   justify-content: space-around;
   align-items: center;
@@ -13,9 +18,15 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+      @media screen and (max-width: 650px) {
+        gap: 5px;
+      }
     .header {
       font-size: 2em;
       font-weight: 700;
+      @media screen and (max-width: 650px) {
+         font-size: 1.85em;
+      }
       span {
         color: #9d50f6;
       }
